<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="255dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="52dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/saveBtn"
        app:layout_constraintStart_toStartOf="@+id/backBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="80"
            android:orientation="vertical">

            <TextView
                android:id="@+id/edit_nameText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|center"
                android:gravity="left|center"
                android:text="@string/StockName"
                tools:layout_editor_absoluteX="39dp"
                tools:layout_editor_absoluteY="55dp" />

            <TextView
                android:id="@+id/edit_priceText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="left|center"
                android:text="@string/StockTag2"
                tools:layout_editor_absoluteX="39dp"
                tools:layout_editor_absoluteY="96dp" />

            <TextView
                android:id="@+id/edit_stockText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="left|center"
                android:text="@string/NumberOfStocks"
                tools:layout_editor_absoluteX="39dp"
                tools:layout_editor_absoluteY="143dp" />

            <TextView
                android:id="@+id/edit_sectorText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="left|center"
                android:text="@string/Sector"
                tools:layout_editor_absoluteX="39dp"
                tools:layout_editor_absoluteY="183dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/nameHint"
                android:inputType="textPersonName"
                android:maxLength="15"
                tools:layout_editor_absoluteX="56dp"
                tools:layout_editor_absoluteY="360dp" />

            <EditText
                android:id="@+id/edit_price"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/PriceHint"
                android:inputType="numberDecimal"
                android:maxLength="7"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_stock"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/StockHint"
                android:inputType="numberSigned"
                android:maxLength="7"
                tools:layout_editor_absoluteX="56dp"
                tools:layout_editor_absoluteY="287dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="106dp"
                tools:layout_editor_absoluteY="329dp">

                <RadioButton
                    android:id="@+id/sector_radio1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/CheckBox1"
                    tools:layout_editor_absoluteX="47dp"
                    tools:layout_editor_absoluteY="342dp" />

                <RadioButton
                    android:id="@+id/sector_radio2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/CheckBox2"
                    tools:layout_editor_absoluteX="227dp"
                    tools:layout_editor_absoluteY="345dp" />

                <RadioButton
                    android:id="@+id/sector_radio3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/CheckBox3"
                    tools:layout_editor_absoluteX="227dp"
                    tools:layout_editor_absoluteY="373dp" />
            </RadioGroup>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="56dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/CancelButton"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/SaveButton"
        android:textAllCaps="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/backBtn"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>